feat(petstore): init Petstore feature
