# domain/src/main/java/com/spring/skeleton/domain/petstore/entity/PetStore.java
@@ -1,0 +1,6 @@
+package com.spring.skeleton.domain.petstore.entity;
+
+import java.util.UUID;
+
+public record PetStore(UUID id, String name) {
+}
